# GLshader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
examples/from_file/: .gitignore  CMakeLists.txt  context.hpp  dinc.glsl  enums.hpp  inc.glsl  main.cpp  test.vert  wgl_context.cpp
include/glsp/: compiler.hpp  config.hpp  definition.hpp  glsp.hpp  huffman.hpp  preprocess.hpp
src/: definition.cpp  preprocessor.cpp  strings.hpp
src/compiler/: compiler.cpp
src/compress/: huffman.cpp
src/opengl/: loader.cpp  loader.hpp
src/preprocessor/: classify.cpp  classify.hpp  control.cpp  control.hpp  eval.cpp  eval.hpp  extensions.cpp  extensions.hpp  files.hpp  load_gl.cpp  load_gl.hpp  macro.cpp  macro.hpp  preprocessor.cpp  skip.cpp  skip.hpp
